--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Leer fichero XML y TXT</title>
+	<link href="css.css" type="text/css" rel="stylesheet" media="all" />
     </head>
     <body>
 		<div>Cargar fichero XML</div>
