--- a/Examen/DavidFabroexamen.html
+++ b/Examen/DavidFabroexamen.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Leer fichero XML y TXT</title>
-	<link href="css.css" type="text/css" rel="stylesheet" media="all" />
+	<link href="DavidFabrocss.css" type="text/css" rel="stylesheet" media="all" />
     </head>
     <body>
 		<div>Cargar fichero XML</div>
 		<div id="ficheroXML"></div>
-        <script src="ajax.js"></script>
-        <script src="leerFicheroXML.js"></script>
+        <script src="DavidFabroajax.js"></script>
+        <script src="DavidFabroleerXML.js"></script>
 
 	</body>
 </html>
