--- a/Examen/DavidFabroexamen.html
+++ b/Examen/DavidFabroexamen.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>Leer fichero XML y TXT</title>
+        <title>Examen del cine javascript</title>
 	<link href="DavidFabrocss.css" type="text/css" rel="stylesheet" media="all" />
     </head>
     <body>
